# chip-8

./: Cargo.toml  README.md  index.html
chip8/: Cargo.toml  index.html
chip8-core/: Cargo.toml
chip8-core/src/: audio.rs  common.rs  cpu.rs  display.rs  lib.rs  register.rs
chip8-core/src/instruction/: arithmetic.rs  assignment.rs  bitwise.rs  display.rs  jumps.rs  mod.rs
chip8-core/tests/: timendus.rs
chip8-core/tests/Cosmac CHIP-8 snapshots/: timendus__quirks.snap
chip8-core/tests/Cosmac snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8-core/tests/Super-CHIP snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8-core/tests/XO-CHIP snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8-lib/: Cargo.toml
chip8-lib/src/: audio.rs  common.rs  cpu.rs  display.rs  font.rs  instruction.rs  lib.rs  register.rs
chip8-lib/src/instruction/: arithmetic.rs  assignment.rs  bitwise.rs  branches.rs  display.rs  input.rs  jumps.rs  misc.rs  mod.rs  timers.rs
chip8-lib/tests/: timendus.rs
chip8-lib/tests/Cosmac CHIP-8 snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8-lib/tests/Super-CHIP snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8-lib/tests/XO-CHIP snapshots/: timendus__corax_opcodes.snap  timendus__flags.snap  timendus__ibm_logo.snap  timendus__quirks.snap  timendus__splash_screen.snap
chip8/src/: debug_window.rs  desktop_frontend.rs  emulator.rs  main.rs  web_frontend.rs  window.rs
debugger-chip8/: Cargo.toml
debugger-chip8/src/: lib.rs
desktop-chip8/: Cargo.toml
desktop-chip8/src/: debug_window.rs  emulator.rs  main.rs
src/: common.rs  cpu.rs  display.rs  emulator.rs  font.rs  instruction.rs  log.rs  main.rs  register.rs  window.rs
src/instruction/: arithmetic.rs  assignment.rs  bitwise.rs  branches.rs  display.rs  input.rs  jumps.rs  misc.rs  timers.rs
web-chip8/: Cargo.toml
