[package]
name = "rust-chip-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.1"
rand = "0.8.5"
instant = "0.1.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = [ "js" ] }
minifb = { version = "0.23.0", features = [ "web" ], default-features = false }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [ "Window", "Document", "Element", "HtmlInputElement", "FileList", "File", "Blob" ] }
js-sys = "0.3.60"
