[package]
name = "chip8-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["rand/std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4.1"
rand = { version = "0.8.5", default-features = false, features = [ "getrandom" ] }
cfg-if = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = [ "js" ] }
