[package]
name = "chip8-lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["cosmac", "std", "serde"]
std = ["rand/std", "serde/std"]
cosmac = []
super-chip = []
xo-chip = []
serde = ["enum-map/serde", "serde-big-array"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.4"
rand = { version = "0.8", default-features = false, features = [ "getrandom" ] }
cfg-if = "1.0"
serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
serde-big-array = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = [ "js" ] }
