[package]
name = "chip8-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

[features]
default = ["cosmac", "std", "serde"]
alloc = ["nanorand/alloc", "serde/alloc"]
std = ["nanorand/std", "serde/std", "getrandom/std", "alloc"]
cosmac = []
super-chip = []
xo-chip = []
serde = ["enum-map/serde", "serde-big-array"]
getrandom-js = ["getrandom/js"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.5"
nanorand = { version = "0.7", default-features = false, features = [ "wyrand", "getrandom", "rdseed" ] }
cfg-if = "1.0"
serde = { version = "1.0", default-features = false, features = [ "derive" ], optional = true }
serde-big-array = { version = "0.5", optional = true }
getrandom = { version = "0.2", features = [ "rdrand" ] }
