[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-lib.path = "../chip8-lib"
instant = "0.1.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# minifb = { version = "0.23.0", features = [ "web" ], default-features = false }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [ "Window", "Document", "Element", "HtmlInputElement", "FileList", "File", "Blob" ] }
js-sys = "0.3.60"
