[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-lib = { path = "../chip8-lib", features = [ "cosmac", "super-chip", "xo-chip", "getrandom-js", "std" ] }
softbuffer = "0.2"
winit = "0.28"
cfg-if = "1.0"
rfd = "0.11"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ "Window", "Document", "Element", "HtmlInputElement", "FileList", "File", "Blob" ] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
tracing-wasm = "0.2"
rodio = { version = "0.17", default-features = false, features = [ "wasm-bindgen" ] }
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
instant = "0.1"
tracing-subscriber = "0.3"
rodio = { version = "0.17", default-features = false }
tokio = { version = "1", features = [ "full" ] }
