[package]
name = "debugger-chip8"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8-core = { path = "../chip8-core", features = [ "std" ], default-features = false }
strum = { version = "0.25", features = [ "derive" ] }
enum-map = "2.5"
serde = { version = "1.0", features = [ "derive" ], optional = true }
funty = "2.0"
once_cell = "1.18"

[features]
default = ["cosmac"]
getrandom-js = ["chip8-core/getrandom-js"]
serde = ["chip8-core/serde", "dep:serde"]
cosmac = ["chip8-core/cosmac"]
super-chip = ["chip8-core/super-chip"]
xo-chip = ["chip8-core/xo-chip"]
